@@ -1,0 +1,61 @@
+/**
+ * The MIT License (MIT)
+ *
+ * Copyright (c) 2017 Paul Campbell
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software
+ * and associated documentation files (the "Software"), to deal in the Software without restriction,
+ * including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
+ * and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so,
+ * subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all copies
+ * or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+ * INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE
+ * AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+ * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ */
+
+package net.kemitix.mon.experimental.either;
+
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+
+import java.util.function.Consumer;
+import java.util.function.Function;
+
+/**
+ * An Either type holding a right value.
+ *
+ * @param <L> the type of the Either for left value
+ * @param <R> the type of the Either for right value
+ * @author Paul Campbell (pcampbell@kemitix.net)
+ */
+@RequiredArgsConstructor
+class Right<L, R> implements Either<L, R> {
+
+    @Getter
+    private final boolean left = false;
+    @Getter
+    private final boolean right = true;
+
+    private final R value;
+
+    @Override
+    public void match(final Consumer<L> onLeft, final Consumer<R> onRight) {
+        onRight.accept(value);
+    }
+
+    @Override
+    public <T> Either<T, R> mapLeft(final Function<L, T> f) {
+        return new Right<>(value);
+    }
+
+    @Override
+    public <T> Either<L, T> mapRight(final Function<R, T> f) {
+        return new Right<>(f.apply(value));
+    }
+}
